ggplot2 0.8.3  (2008-XX-XX)
----------------------------------------

* facet_wrap: contents guaranteed to be clipped to panel
* resolution: fixed bug in computation of resolution that lead to (e.g.) incorrect boxplot widths when there was only a single x value in a group.
* geom_vline, geom_hline, geom_abline: should work in yet more situations
* stat_summary: should be a little faster
* stat_summary: now warns when dropping records with missing values
* scale_manual: breaks and limits 
* scale_discrete: factor levels no longer mistakenly reordered
* American spelling of color accepted in as geom parameter, and all colour scales have alias spelled color (e.g. scale_color_hue)
* scale_discrete: empty factor levels will be preserved, unless drop = TRUE
* xlim and ylim now work recognise Date and POSIXct classes to create date and date_time scales respectively
* geom_text: better legend
* alpha: new aesthetic, with scale alpha.  Where a geom has both fill and colour, alpha affects the fill.
* facet_grid now takes strip label function from parameter labeller, not theme setting
* fortify: full set of methods for turning data from the sp package into data frames that can be plotted with ggplot2
* labels_parsed and labels_bquote functions to make it easier to display expressions on facet labels