@@ -17,6 +17,7 @@ geom_crossbar <- GeomCrossbar$build_accessor()
 geom_density <- GeomDensity$build_accessor()
 geom_density2d <- GeomDensity2d$build_accessor()
 geom_errorbar <- GeomErrorbar$build_accessor()
+geom_errorbarh <- GeomErrorbarh$build_accessor()
 geom_freqpoly <- GeomFreqpoly$build_accessor()
 geom_hex <- GeomHex$build_accessor()
 geom_histogram <- GeomHistogram$build_accessor()
