@@ -16,3 +16,4 @@ ggplot2 0.8.3  (2008-XX-XX)
 * facet_grid now takes strip label function from parameter labeller, not theme setting
 * fortify: full set of methods for turning data from the sp package into data frames that can be plotted with ggplot2
 * labels_parsed and labels_bquote functions to make it easier to display expressions on facet labels
+* errorbarh: new geom for horizontal error bars
